@@ -1,3 +1,9 @@
+2009-11-21  Felix Zielcke  <fzielcke@z-51.de>
+
+	Patch from Loïc Minier <loic.minier@ubuntu.com>.
+	* util/grub.d/30_os-prober.in: Cope with Linux entries where
+	root and /boot are on different devices.
+
 2009-11-21  Carles Pina i Estany <carles@pina.cat>
 2009-11-21  Robert Millan  <rmh.grub@aybabtu.com>
 
